--- a/mainstyles.css
+++ b/mainstyles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darkred;
+  background-color: darkgrey;
 }
 
 h1 {
@@ -10,7 +10,7 @@ h1 {
 p {
   color: white;
   text-align: center;
-  font-family: "Papyrus", verdana;
+  font-family: verdana;
   font-size: 20px;
 
 }
