--- a/mainstyles.css
+++ b/mainstyles.css
@@ -1,7 +1,8 @@
 body {
-  background-color: rgb(139,0,0);
+  background-image: url(RuleofThreeLightLogo);
+  background-position: right bottom, left top;
+  background-repeat: no-repeat, repeat;
 }
-
 h1 {
   color: white;
   text-align: center;
