--- a/mainstyles.css
+++ b/mainstyles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(RuleofThreeLightLogo);
+  background-image: url(RuleofThreeLightLogo.png);
   background-position: right bottom, left top;
   background-repeat: no-repeat, repeat;
 }
