--- a/mainstyles.css
+++ b/mainstyles.css
@@ -1,7 +1,7 @@
 body {
   background-image: url(RuleofThreeLightLogo.png);
-  background-position: right bottom, left top;
-  background-repeat: no-repeat, repeat;
+  background-position: left top;
+  background-repeat: no-repeat;
 }
 h1 {
   color: white;
